--- a/src/blocks/media-card/styles/style.scss
+++ b/src/blocks/media-card/styles/style.scss
@@ -69,17 +69,6 @@
 			margin-left: -100px;
 		}
 
-		p,
-		a,
-		h1,
-		h2,
-		h3,
-		h4,
-		h5,
-		h6 {
-			color: inherit !important;
-		}
-
 		p:last-of-type {
 			margin-bottom: 0;
 		}
@@ -131,6 +120,24 @@
 
 			p:last-of-type {
 				margin-bottom: 0;
+			}
+		}
+	}
+}
+
+//Fix background color contrast issue
+body .entry .entry-content{
+	.wp-block-coblocks-media-card {
+		&__content {
+			p,
+			a,
+			h1,
+			h2,
+			h3,
+			h4,
+			h5,
+			h6 {
+				color: inherit;
 			}
 		}
 	}
